# ai_annotator

./: README.md  main.py  pyproject.toml  setup.py
ai_annotator/: __init__.py
ai_annotator/classes/: __init__.py  annotation_project.py  database.py  evaluation.py
ai_annotator/core/: __init__.py  annotation_project.py  config.py  database.py  embedding_model.py  embedding_models.py  model.py  models.py
ai_annotator/evaluation/: __init__.py  parser.py
ai_annotator/prompts/: gold_label-induced_reasoning.txt
annotator/: __init__.py
examples/: quick_example.ipynb
old/: backup_milvus_implementation.py
src/ai_annotator/: __init__.py
src/ai_annotator/core/: __init__.py  annotation_project.py  config.py  database.py  embedding_model.py  model.py
src/ai_annotator/evaluation/: __init__.py  metrics.py  parser.py
src/core/: __init__.py  annotation_project.py  config.py  database.py
src/evaluation/: __init__.py  parser.py
