[project]
name = "ai_annotator"
version = "0.1.3"
description = "Tool for rapid testing of LLMs for annotation tasks."
authors = [
    { name = "nsschw", email = "s2nsschw@uni-trier.com" }
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

dependencies = [
    "openai",
    "transformers",
    "chromadb",
    "pandas",
    "sentence_transformers",
    "pydantic",
    "ollama",
    "openai",
    "tqdm",
]

[tool.setuptools.packages.find]
where = ["src"]