[project]
name = "ai_annotator"
version = "0.1.6"
description = "Tool for rapid testing of LLMs for annotation tasks."
authors = [
    { name = "nsschw", email = "s2nsschw@uni-trier.com" }
]
requires-python = ">=3.9"

dependencies = [
    "openai",
    "chromadb",
    "pandas",
    "pydantic",
    "ollama",
    "openai",
    "tqdm",
]

[project.optional-dependencies]
local = [
    "transformers",
    "sentence_transformers",
    "tf-keras"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["src"]